<resources>
    <string name="app_name">YourWay</string>
    <string name="app_in_name">Твой Путь</string>
    <string name="description">Найди свой путь. Тебе в этом помогут коучинг и психология</string>
    <string name="textBottom">Войдите в свою учетную запись</string>
    <string name="come">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="aboutService">Здесь Катя напишет красивый текст о том, какой это великолепный сервис и бла бла бла.
    Вы научитесь:
    - Понимать своего истинного потенциала
    - Обретете смысл жизни и видение своего жизненного Пути
    - Бла бла бла
    - Тут не надо много текста
    И как-то нужно будет завершить...
    </string>
    <string name="notifi">Уведомления от сервиса</string>
    <string name="textNotift">Напоминание о сессии, новые сообщения от психолога или службы поддержки.</string>
    <string name="service">О сервисе</string>
    <string name="persArea">Личный кабинет</string>
    <string name="special">Специалисты</string>
    <string name="books">Книги</string>
    <string name="courses">Курсы и мастер классы</string>
    <string name="articles">Статьи</string>
    <string name="glider">Планер</string>
    <string name="saveData">Запомнить данные</string>
    <string name="exit">Выйти</string>
    <string name="deleteProfile">Удалить профиль</string>
    <string name="profile">Профиль и настройки</string>
    <string name="save">Сохранить</string>
    <string name="name">Имя: </string>
    <string name="phone">Телефон: </string>
    <string name="email">Email: </string>
    <string name="areaDate">Дата рождения: </string>
    <string name="pass">Пароль: </string>
    <string name="city">Город: </string>
    <string name="task">Задача</string>
    <string name="textTask">Ставь любые задачи и небольшие цели из всех сфер жизни, которые ты хочешь выполнить.</string>
    <string name="alarm">Будильник</string>
    <string name="textAlarm">Устанавливай мотивационные сигналы, чтобы просыпаться быстро и легко.</string>
    <string name="monitoring">Мониторинг</string>
    <string name="textMonitoring">Контролируй свои эмоции и чувства с любой периодичностью.</string>
    <string name="beliefs">Убеждения</string>
    <string name="textBeliefs">Программируй свое подсознание систематически, как тебе удобно.</string>
    <string name="courseGoalSetting">Целеполагание</string>
    <string name="courseAcceptanceOfEmotions">Принятие эмоций</string>
    <string name="courseImpostorSyndrome">Синдром самозванца</string>
    <string name="courseSelfLove">Любовь к себе</string>
    <string name="coursesResourses">Я в ресурсе</string>
    <string name="filter">Фильтр</string>
    <string name="online">Онлайн</string>
    <string name="offline">Офлайн</string>
    <string name="coach">Коучинг</string>
    <string name="psych">Психология</string>
    <string name="backTextCategory">backTextCategory</string>
    <string name="courseStartData">Дата начала: </string>
    <string name="courseFormat">Формат / Город:  </string>
    <string name="coursePrice">Стоимость: </string>
    <string name="buttonAddCourse">Добавить в корзину</string>
    <string name="cart">Корзина</string>
    <string name="coursePageDesc">Тут будет красивое описание курса, чтобы люди могли понять о чем идет речь и захотели на него записаться.</string>

</resources>

