<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        app:srcCompat="@drawable/_811637" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@color/violet"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/violet"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textBottom"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/textBottom"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_above="@id/textBottom"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="25dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnCome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/come_registration"
            android:text="@string/come"
            android:textColor="@color/violet" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/come_registration"
            android:text="@string/registration"
            android:textColor="@color/violet" />
    </LinearLayout>


</RelativeLayout>