<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/courseBack"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:contentPaddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/courseGoalSetting"
                android:transitionName="courseImage"
                app:srcCompat="@drawable/coursegoalsetting" />

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/courseGoalSetting" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/courseStartData" />

                <TextView
                    android:id="@+id/courseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/courseStartData" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/courseFormat" />

            <TextView
                android:id="@+id/courseFormat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/courseFormat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/coursePrice" />

            <TextView
                android:id="@+id/coursePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/coursePrice" />

        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>